Word wrap on recipe fixed

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -48,6 +48,4 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-input[type="radio"]{
-    -webkit-appearance: radio;
-}
+
