--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -81,6 +81,7 @@ li {
 	padding: 5px;
 	list-style-type: square;
 	display: block;
+	white-space: normal;
 }
 li.loopText {
 	display: block;
@@ -91,6 +92,9 @@ li.loopText {
 }
 label {
 	color: white;
+}
+.wordBreak {
+		white-space: normal;
 }
 /* 
 ========================================
